# esp-miao

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  README.md  REFERENCE.md  SPEC.md  TROUBLESHOOTS.md  WALKTHROUGH.md  pyproject.toml
develop_journal/2026-03-02/: NOTES.md  PLAN.md  TODO.md
develop_journal/2026-03-03/: NOTES.md  PLAN.md  TEST_NOTES.md  TODO.md
develop_journal/2026-03-04/: NOTES.md  PLAN.md  SPEC_INTEGRATION_MYXIAOMI.md  TODO.md  ai-agent-analysis-result01.md  esp-miao202603041400.md  esp-miao202603041535.md
develop_journal/2026-03-05/CIP1/: NOTES.md  PLAN.md  TEST_REVIEW_TODO.md  TODO.md
develop_journal/2026-03-05/CIP2/: NOTES2.md  PLAN2.md  REVIEW_TODO2.md  TODO2.md  original-Metrics-plan-todo-review-docs.tar.xz
develop_journal/2026-03-05/CIP3/: NOTES.md  PLAN.md  REVIEW_TODO.md  TODO.md
develop_journal/2026-03-07/: NOTES.md  PLAN.md  TODO.md
develop_journal/2026-03-08/: NOTES.md  PLAN.md  REVIEW_TODO.md  TODO.md
develop_journal/2026-03-12/: NOTES.md  PLAN.md  TODO.md
develop_journal/2026-03-16/: NOTES.md  PLAN.md  TODO.md  esp-miao-upgrade-plan.md
develop_journal/2026-03-17/: NOTES.md  PLAN.md  TODO.md
develop_journal/2026-03-19/: NOTES.md  PLAN.md  REVIEW_TODO.md  TODO.md  esp-miao-patch-plan.md
develop_journal/2026-03-25-pending/: NOTES.md  PLAN.md  TODO.md
firmware/esp32_client/: README.md  esp32_client.ino
firmware/esp32_edge_impulse/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32_edge_impulse/components/TFT_eSPI/: library.json
firmware/esp32_edge_impulse/components/eye_ui/: eye_ui.cpp  eye_ui.h
firmware/esp32_edge_impulse/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/esp32_edge_impulse/main/audio/: audio_capture.cpp  audio_capture.h  vad.cpp  vad.h
firmware/esp32_edge_impulse/main/config/: config.cpp  config.h
firmware/esp32_edge_impulse/main/logic/: audio_streamer.cpp  audio_streamer.h  hardware_controller.cpp  hardware_controller.h  wake_word_detector.cpp  wake_word_detector.h
firmware/esp32_edge_impulse/main/network/: websocket_client.cpp  websocket_client.h  wifi_manager.cpp  wifi_manager.h
firmware/esp32_edge_impulse/main/time/: time_manager.cpp  time_manager.h
firmware/esp32_edge_impulse/model-parameters/: model_metadata.h
firmware/esp32_mic_test/: esp32_mic_test.ino
firmware/esp32_mic_test2/: esp32_mic_test2.ino
firmware/mic_frontend_v1/: mic_frontend_v1.ino
mqtt_for_esp32/: README.md  test_mqttsub.sh
mqtt_for_esp32/esp32-smart-light/: esp32-smart-light.ino
mqtt_for_esp32/esp32_smart_fan/: .gitignore  esp32_smart_fan.ino
scripts/: analyze_metrics.py  run_interactive_bench.py
src/esp_miao/: __init__.py  app.py  audio.py  config.py  connection.py  dispatch.py  esp32_simulator.py  intent.py  models.py  retry.py  server.py  utils.py
src/esp_miao/metrics/: __init__.py  aggregator.py  context.py  logger.py
tests/: simulate_voice.py  test_audio.py  test_communication.py  test_integrated_modular.py  test_modular_server.py  test_vacuum_integration.py
